6700107: java/lang/Class/forName/TooManyDimensions.java crashes with SIGSEGV in c2 compiler with fastdebug

ObjArrayKlass::compute_modifier_flags was unnecessarily recursive

Reviewed-by: kamg